<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_menu">

    <fragment
        android:id="@+id/navigation_menu"
        android:name="id.fishku.fisherseller.presentation.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_order"
        android:name="id.fishku.fisherseller.presentation.ui.order.OrderFragment"
        android:label="@string/title_order"
        tools:layout="@layout/fragment_order" />
    <fragment
        android:id="@+id/navigation_account"
        android:name="id.fishku.fisherseller.presentation.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />
    <fragment
        android:id="@+id/navigation_chat"
        android:name="id.fishku.fisherseller.presentation.ui.livechat.LiveChatFragment"
        android:label="fragment_live_chat"
        tools:layout="@layout/fragment_live_chat" />
</navigation>